--- a/src/app/widgets/widget-event/widget.event.html
+++ b/src/app/widgets/widget-event/widget.event.html
@@ -1,4 +1,4 @@
-<table class="c-table c-table_striped c-table_condensed" *ngIf="values.events.config">
+<table class="c-table c-table_striped c-table_condensed" *ngIf="values?.events?.config">
     <thead>
     <tr>
         <th>N</th>
