[sem-1204]: - новый виджет выведен, интегральный статус формируется на группу

--- a/src/app/widget-options/widget-options.component.html
+++ b/src/app/widget-options/widget-options.component.html
@@ -113,7 +113,7 @@
             <option value="null">No select</option>
             <option value="-1">False value</option>
             <option value="0">None</option>
-            <option value="1">Succsee</option>
+            <option value="1">Success</option>
             <option value="2">Warning</option>
             <option value="3">Error</option>
         </select>
